--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/" }
+  "builds": [{ "src": "src/package.json", "use": "@vercel/node" }],
+  "routes": [
+    { "src": "/(.*)", "dest": "src/$1" }
   ]
 }
